# coding_agent_installer_ridder_lab

./: .gitignore  CHANGELOG.md  README.md  TODO.md  pyproject.toml  steps_done_steps_remaining_26_04_2026_1833.md
bundled/: README.md  coding_agent_hpc.def
code_review_claude_code_hpc_27_04_2026/: AGENTS.md  REPORT_TEMPLATE.md  claude_code_instructions_diagnostic_review_coding_agents_hpc.md
docs/: implementation_summary_and_issues_27_04_2026.md  possible_coding_agent_launch_flow_and_how_they_are_sandboxed_27_04_2026.md  requirements.md  vscode_extension_wrap_brief_27_04_2026.md  vscode_integration.md  wrapping_vscode_extensions_deep_research_27_04_2026.md
hooks/: on_start_cognitive_reminder.py  on_stop_hpc_validator.py
jai/: claude.conf
scripts/: build_and_deploy_sif.sh  diagnose_vscode_extensions.sh  hpc_prereq_check.sh  install_coding_agents.sh  package_skill.py
tests/: test_agent_vscode.py  test_agents.py  test_bundled_tree_dedup.py  test_cli_install_exclude.py  test_codex_hooks.py  test_config.py  test_convert_mcp.py  test_cwd_policy.py  test_detect_existing.py  test_doctor_node_check.py  test_doctor_probes.py  test_doctor_scans.py  test_dry_run.py  test_emit_managed_vscode_settings.py  test_install_skips_npm_for_sif_agents.py  test_installer_sweeps_stale_node_modules.py  test_jsonc_merge.py  test_local_mode.py  test_logging.py  test_merge_settings.py  test_next_steps.py  test_opencode_permissions.py  test_policy_emit.py  test_registry_symmetry.py  test_security.py  test_statusbar.py  test_sync.py  test_uninstall.py  test_utils.py  test_vscode_claude.py  (+6 more)
(+89 files in other folders)
